# quipy

./: README.md  pyproject.toml
qilb/: __init__.py  ops.py
qilb/dense/: state.py
quipy/dense/: circuit.py
quipy/sparse/: __init__.py  circuit.py  state.py
