[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quipy"
version = "0.1.1"
authors = [
    {name = "Vladimir Dabić", email = "vddabic@gmail.com"}
]
description = "Quantum circuit simulator with sparse and dense implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]
keywords = ["quantum", "quantum computing", "simulation", "quantum circuits", "quantum information"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vladimirdabic/quipy"
Repository = "https://github.com/vladimirdabic/quipy"